--- a/index.html
+++ b/index.html
@@ -10,6 +10,21 @@
 
 <body>
 
+    <header>
+        <img src="ui_kit/kealogo.svg" alt="kea logo">
+    </header>
+
+    <section>
+        <article></article>
+        <article></article>
+    </section>
+
+
+    <section>
+        <article></article>
+        <article></article>
+    </section>
+
 
 
 
