--- a/index.html
+++ b/index.html
@@ -14,15 +14,20 @@
         <img src="ui_kit/kealogo.svg" alt="kea logo">
     </header>
 
-    <section>
-        <article></article>
-        <article></article>
+    <section id="login">
+        <article>
+            <img src="ui_kit/inputs.svg" alt="kea logo">
+            <img src="ui_kit/inputs-1.svg" alt="kea logo">
+
+        </article>
+
     </section>
 
 
-    <section>
-        <article></article>
-        <article></article>
+    <section id="continue">
+        <article><img src="ui_kit/inputs.svg" alt="kea logo">
+            <img src="ui_kit/inputs-1.svg" alt="kea logo"></article>
+
     </section>
 
 
@@ -35,6 +40,4 @@
 
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
