html startside påbegyndt

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <section id="login">
         <article>
-            <img src="ui_kit/inputs.svg" alt="kea logo">
-            <img src="ui_kit/inputs-1.svg" alt="kea logo">
+            <img src="ui_kit/username.svg" alt="kea logo">
+            <img src="ui_kit/code.svg" alt="kea logo">
 
         </article>
 
@@ -25,8 +25,9 @@
 
 
     <section id="continue">
-        <article><img src="ui_kit/inputs.svg" alt="kea logo">
-            <img src="ui_kit/inputs-1.svg" alt="kea logo"></article>
+        <article><img src="ui_kit/Divider.svg" alt="kea logo"> </article>
+        <article><img src="ui_kit/Continue.svg" alt="kea logo">
+            <img src="ui_kit/login.svg" alt="kea logo"></article>
 
     </section>
 
