html index næsten done undtaget divide img

--- a/index.html
+++ b/index.html
@@ -16,28 +16,22 @@
 
     <section id="login">
         <article>
-            <img src="ui_kit/username.svg" alt="kea logo">
-            <img src="ui_kit/code.svg" alt="kea logo">
+            <img src="ui_kit/username.svg" alt="kea user">
+            <img src="ui_kit/code.svg" alt="kea code">
 
         </article>
-
     </section>
 
 
     <section id="continue">
-        <article><img src="ui_kit/Divider.svg" alt="kea logo"> </article>
-        <article><img src="ui_kit/Continue.svg" alt="kea logo">
+        <article><img src="ui_kit/Divider.svg" alt="divider"> </article>
+
+
+        <article>
+            <a href="start.html"><img src="ui_kit/Continue.svg" alt="continue"></a>
             <img src="ui_kit/login.svg" alt="kea logo"></article>
 
     </section>
-
-
-
-
-
-
-
-
 
 
     <script src="script.js"></script>
