box til startside igangsat

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 
     <section id="continue">
-        <article><img src="ui_kit/Divider.svg" alt="divider"> </article>
+        <article><img src="ui_kit/Divider.svg" alt="divider">
 
 
-        <article>
-            <a href="start.html"><img src="ui_kit/Continue.svg" alt="continue"></a>
+
+            <a href="start.html"><img src="ui_kit/Continue.svg" alt="start"></a>
             <img src="ui_kit/login.svg" alt="kea logo"></article>
 
     </section>
