--- a/start.html
+++ b/start.html
@@ -9,9 +9,29 @@
 </head>
 
 <body>
-    lala
+    <header class="header2">
+        <img src="startside_ui/kealille.svg" alt="kea">
+        <nav>
+            <img src="startside_ui/Profile.svg" alt="kea">
+            <div id="menuknap"><img src="startside_ui/Menu.svg" alt="kea"></div>
+
+            <ul id="menu" class="hidden">
+                <li><a href="forside.html">Forside</a></li>
+                <li> <a href="underside.html">Underside</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="box">
+        <article class="box1row"><img src="startside_ui/Folder.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/Folder.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/Folder.svg" alt="mappe"></article>
+
+    </section>
 
 
+    <script src="script.js">
+    </script>
+</body>
 
-    <script src="script.js"></script>
-</body></html>
+</html>
