to boxe rækker done

--- a/start.html
+++ b/start.html
@@ -24,14 +24,16 @@
 
     <section id="box">
         <article class="box1row"><img src="startside_ui/Folder.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/Folder.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/Folder.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/Calendar.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/Alert.svg" alt="mappe"></article>
+        <article class="box2row">
+            <H1>TECHLOUNGE</H1>
+        </article>
+        <article class="box1row"><img src="startside_ui/mail.svg" alt="mappe"></article>
 
     </section>
 
 
     <script src="script.js">
     </script>
-</body>
-
-</html>
+</body></html>
