Startside sat op i gorve træk - mangler noget positionering og rettelser

--- a/start.html
+++ b/start.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>start</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mzy1oou.css">
+
+
+
+
+
+
+
 </head>
 
 <body>
@@ -27,13 +35,46 @@
         <article class="box1row"><img src="startside_ui/Calendar.svg" alt="mappe"></article>
         <article class="box1row"><img src="startside_ui/Alert.svg" alt="mappe"></article>
         <article class="box2row">
-            <H1>TECHLOUNGE</H1>
+            <h1>Techlounge</h1>
         </article>
         <article class="box1row"><img src="startside_ui/mail.svg" alt="mappe"></article>
 
+        <article class="box1row"><img src="startside_ui/favoritter.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/grupper.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/chat.svg" alt="mappe"></article>
+
     </section>
 
+    <section id="box_1">
+
+        <section class="box_left">
+
+
+            <article class="box1row"><img src="startside_ui/Search.svg" alt="mappe"></article>
+            <article class="box1row"><img src="startside_ui/afleveringer.svg" alt="mappe"></article>
+
+
+
+        </section>
+        <section class="box_right">
+            <article class="box3row">
+
+                <h1>Aktuelt</h1>
+            </article>
+        </section>
+
+    </section>
+
+    <section id="box_2">
+        <article class="box1row"><img src="startside_ui/question.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/question.svg" alt="mappe"></article>
+        <article class="box1row"><img src="startside_ui/question.svg" alt="mappe"></article>
+
+
+    </section>
 
     <script src="script.js">
     </script>
-</body></html>
+</body>
+
+</html>
