--- a/start.html
+++ b/start.html
@@ -21,7 +21,7 @@
         <img src="startside_ui/kealille.svg" alt="kea">
         <nav>
             <img src="startside_ui/Profile.svg" alt="kea">
-            <div id="menuknap"><img src="startside_ui/Menu.svg" alt="kea"></div>
+            <div id="menuknap"><img id="menuknap_img" src="startside_ui/Menu.svg" alt="kea"></div>
 
             <ul id="menu" class="hidden">
                 <li><a href="forside.html">Forside</a></li>
