burger menu tæt på done

--- a/start.html
+++ b/start.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+
     <header class="header2">
         <img src="startside_ui/kealille.svg" alt="kea">
         <nav>
@@ -24,9 +25,36 @@
             <div id="menuknap"><img id="menuknap_img" src="startside_ui/Menu.svg" alt="kea"></div>
 
             <ul id="menu" class="hidden">
-                <li><a href="forside.html">Forside</a></li>
-                <li> <a href="underside.html">Underside</a></li>
+                <img src="burgermenu/logo.svg" alt="kea">
+                <li><a href="index.html">Aktuelt</a></li>
+                <br>
+                <br>
+                <li> <a href="index.html">Skema</a></li>
+                <br>
+                <br>
+                <li><a href="index.html">Afleveringer</a></li>
+                <br>
+                <br>
+                <li> <a href="index.html">Materialer</a></li>
+                <br>
+                <br>
+                <li><a href="index.html">Chat</a></li>
+                <br>
+                <br>
+                <li> <a href="index.html">Indstillinger</a></li>
+
+                <div class="footer">
+                    <p>Log ud</p>
+                </div>
+
+
+
             </ul>
+
+
+
+
+
         </nav>
     </header>
 
@@ -75,6 +103,4 @@
 
     <script src="script.js">
     </script>
-</body>
-
-</html>
+</body></html>
