--- a/start.html
+++ b/start.html
@@ -21,7 +21,7 @@
     <header class="header2">
         <img src="startside_ui/kealille.svg" alt="kea">
         <nav>
-            <img src="startside_ui/Profile.svg" alt="kea">
+            <img class="profil" src="startside_ui/Profile.svg" alt="kea">
             <div id="menuknap"><img id="menuknap_img" src="startside_ui/Menu.svg" alt="kea"></div>
 
             <ul id="menu" class="hidden">
@@ -47,29 +47,77 @@
                     <p>Log ud</p>
                 </div>
 
-
-
             </ul>
-
-
-
-
 
         </nav>
     </header>
 
     <section id="box">
-        <article class="box1row"><img src="startside_ui/Folder.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/Calendar.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/Alert.svg" alt="mappe"></article>
+        <article class="box1row">
+
+            <figure>
+                <img src="startside_ui/Folder.svg" alt="mappe">
+                <figcaption>Materialer</figcaption>
+            </figure>
+
+
+
+        </article>
+
+        <article class="box1row">
+
+            <figure>
+                <img src="startside_ui/Calendar.svg" alt="calender">
+                <figcaption>Skema</figcaption>
+            </figure>
+
+
+
+        </article>
+        <article class="box1row">
+
+            <figure>
+                <img src="startside_ui/Alert.svg" alt="calender">
+                <figcaption>Notifikationer</figcaption>
+            </figure>
+        </article>
+
+
+
+
+
         <article class="box2row">
             <h1>Techlounge</h1>
         </article>
-        <article class="box1row"><img src="startside_ui/mail.svg" alt="mappe"></article>
+        <article class="box1row">
+            <figure>
+                <img src="startside_ui/mail.svg" alt="mail">
+                <figcaption>Mail</figcaption>
+            </figure>
+        </article>
 
-        <article class="box1row"><img src="startside_ui/favoritter.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/grupper.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/chat.svg" alt="mappe"></article>
+        <article class="box1row">
+
+            <figure>
+                <img src="startside_ui/favoritter.svg" alt="favoritter">
+                <figcaption>Farvoritter</figcaption>
+            </figure>
+        </article>
+        <article class="box1row">
+
+            <figure>
+                <img src="startside_ui/grupper.svg" alt="grupper">
+                <figcaption>Grupper</figcaption>
+            </figure>
+
+
+        </article>
+        <article class="box1row">
+            <figure>
+                <img src="startside_ui/chat.svg" alt="chat">
+                <figcaption>Chat</figcaption>
+            </figure>
+        </article>
 
     </section>
 
@@ -78,16 +126,26 @@
         <section class="box_left">
 
 
-            <article class="box1row"><img src="startside_ui/Search.svg" alt="mappe"></article>
-            <article class="box1row"><img src="startside_ui/afleveringer.svg" alt="mappe"></article>
+            <article class="box1row">
+                <figure>
+                    <img src="startside_ui/Search.svg" alt="chat">
+                    <figcaption>Søg</figcaption>
+                </figure>
+            </article>
 
+            <article class="box1row">
+                <figure>
+                    <img src="startside_ui/afleveringer.svg" alt="chat">
+                    <figcaption>Afleveringer</figcaption>
+                </figure>
+            </article>
 
 
         </section>
         <section class="box_right">
             <article class="box3row">
 
-                <h1>Aktuelt</h1>
+                <h2>Aktuelt</h2>
             </article>
         </section>
 
