--- a/start.html
+++ b/start.html
@@ -29,7 +29,7 @@
                 <li><a href="index.html">Aktuelt</a></li>
                 <br>
                 <br>
-                <li> <a href="index.html">Skema</a></li>
+                <li> <a href="skema.html">Skema</a></li>
                 <br>
                 <br>
                 <li><a href="index.html">Afleveringer</a></li>
@@ -56,8 +56,9 @@
         <article class="box1row">
 
             <figure>
+
                 <img src="startside_ui/Folder.svg" alt="mappe">
-                <figcaption>Materialer</figcaption>
+                <figcaption>Mappe</figcaption>
             </figure>
 
 
@@ -67,7 +68,8 @@
         <article class="box1row">
 
             <figure>
-                <img src="startside_ui/Calendar.svg" alt="calender">
+                <a href="skema.html"> <img src="startside_ui/Calendar.svg" alt="calender"></a>
+
                 <figcaption>Skema</figcaption>
             </figure>
 
@@ -152,9 +154,29 @@
     </section>
 
     <section id="box_2">
-        <article class="box1row"><img src="startside_ui/question.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/question.svg" alt="mappe"></article>
-        <article class="box1row"><img src="startside_ui/question.svg" alt="mappe"></article>
+
+
+        <article class="box1row">
+            <figure>
+                <img src="startside_ui/question.svg" alt="chat">
+                <figcaption>xxx</figcaption>
+            </figure>
+        </article>
+        <article class="box1row">
+            <figure>
+                <img src="startside_ui/question.svg" alt="chat">
+                <figcaption>xxx</figcaption>
+            </figure>
+        </article>
+        <article class="box1row">
+            <figure>
+                <img src="startside_ui/question.svg" alt="chat">
+                <figcaption>xxx</figcaption>
+            </figure>
+        </article>
+
+
+
 
 
     </section>
