--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     </header>
 
     <section id="login">
-        <article>
-            <img src="ui_kit/username.svg" alt="kea user">
-            <img src="ui_kit/code.svg" alt="kea code">
 
-        </article>
+
+        <form>
+            <input type="text" name="fname"><br>
+            <input type="text" name="lname"><br>
+
+        </form>
+
     </section>
 
 
