dropdown menu påbegyndt

--- a/aflevering.html
+++ b/aflevering.html
@@ -33,7 +33,7 @@
                 <li> <a href="index.html">Skema</a></li>
                 <br>
                 <br>
-                <li><a href="index.html">Afleveringer</a></li>
+                <li><a href="aflevering.html">Afleveringer</a></li>
                 <br>
                 <br>
                 <li> <a href="index.html">Materialer</a></li>
@@ -49,13 +49,96 @@
                 </div>
 
 
-
-
             </ul>
         </nav>
     </header>
 
+    <h1> Afleveringer</h1>
+    <br>
+    <h3>Næste aflevering</h3>
 
+    <section class="grey">
+
+        <h4> F19 - 04.01.01 - Opgavebeskrivelse - Design Sprint</h4>
+        <p class="txt">Det er vigtigt at du fokuserer på…</p>
+
+        <a class="link" href="skema.html"> <img src="afleveringsite/link.svg" alt="calender"></a>
+
+    </section>
+
+    <h3>Upload aflevering</h3>
+
+
+
+    <section class="grey">
+
+        <article>
+            <h4> Aflevér</h4>
+            <p class="txt">Tirsdag d. 21/5/19 inden kl. 22.00</p>
+            <div class="link"><a href="skema.html"> <img src="afleveringsite/pil.svg" alt="calender"></a></div>
+
+        </article>
+    </section>
+
+    <h3>Tidligere afleveringer</h3>
+    <section class="grey">
+
+        <article>
+            <h4> Tema 1</h4>
+            <p class="txt">Grundlæggende Web</p>
+            <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
+
+            <ul id="dropdown" class="hidden">
+
+                <li>04.01.01 - Opgavebeskrivelse - Design Sprint</li>
+                <br>
+                <br>
+                <li> 04.01.01 - Opgavebeskrivelse - Design Sprint</li>
+                <br>
+                <br>
+                <li>04.01.01 - Opgavebeskrivelse - Design Sprint
+                    <br>
+                    <br>
+
+
+
+            </ul>
+
+        </article>
+    </section>
+
+    <section class="grey">
+
+        <article>
+            <h4> Tema 2</h4>
+            <p class="txt">Grundlæggende Animation</p>
+            <a class="link" href="skema.html"> <img src="afleveringsite/Down%20arrow%20small.svg" alt="calender"></a>
+
+
+        </article>
+    </section>
+
+    <section class="grey">
+
+        <article>
+            <h4> Tema 3</h4>
+            <p class="txt">Grundlæggende Indhold</p>
+            <a class="link" href="skema.html"> <img src="afleveringsite/Down%20arrow%20small.svg" alt="calender"></a>
+
+
+        </article>
+    </section>
+
+    <section class="grey">
+
+        <article>
+            <h4> Tema 4</h4>
+            <p class="txt">Grundlæggende UX</p>
+            <a class="link" href="skema.html"> <img src="afleveringsite/Down%20arrow%20small.svg" alt="calender"></a>
+
+
+        </article>
+    </section>
 
 
 
