--- a/skema.html
+++ b/skema.html
@@ -33,7 +33,7 @@
                 <li> <a href="index.html">Skema</a></li>
                 <br>
                 <br>
-                <li><a href="index.html">Afleveringer</a></li>
+                <li><a href="aflevering.html">Afleveringer</a></li>
                 <br>
                 <br>
                 <li> <a href="index.html">Materialer</a></li>
