--- a/start.html
+++ b/start.html
@@ -32,7 +32,7 @@
                 <li> <a href="skema.html">Skema</a></li>
                 <br>
                 <br>
-                <li><a href="index.html">Afleveringer</a></li>
+                <li><a href="aflevering.html">Afleveringer</a></li>
                 <br>
                 <br>
                 <li> <a href="index.html">Materialer</a></li>
@@ -183,4 +183,6 @@
 
     <script src="script.js">
     </script>
-</body></html>
+</body>
+
+</html>
