Afleveringssite almost done

--- a/aflevering.html
+++ b/aflevering.html
@@ -83,28 +83,24 @@
     <h3>Tidligere afleveringer</h3>
     <section class="grey">
 
-        <article>
-            <h4> Tema 1</h4>
-            <p class="txt">Grundlæggende Web</p>
-            <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
 
-            <ul id="dropdown" class="hidden">
+        <h4> Tema 1</h4>
+        <p class="txt">Grundlæggende Web</p>
+        <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
 
-                <li>04.01.01 - Opgavebeskrivelse - Design Sprint</li>
-                <br>
-                <br>
-                <li> 04.01.01 - Opgavebeskrivelse - Design Sprint</li>
-                <br>
-                <br>
-                <li>04.01.01 - Opgavebeskrivelse - Design Sprint
-                    <br>
-                    <br>
+        <ul id="dropdown" class="hidden">
+
+            <li>04.01.01 - Opgavebeskrivelse - Design Sprint</li>
+
+            <li> 04.01.01 - Opgavebeskrivelse - Design Sprint</li>
+
+            <li>04.01.01 - Opgavebeskrivelse - Design Sprint
 
 
 
-            </ul>
 
-        </article>
+        </ul>
+
     </section>
 
     <section class="grey">
@@ -145,5 +141,6 @@
 
     <script src="script.js">
     </script>
-</body></html>
+</body>
 
+</html>
