--- a/aflevering.html
+++ b/aflevering.html
@@ -25,31 +25,24 @@
 
             <div id="menuknap"><img id="menuknap_img" src="startside_ui/Menu.svg" alt="kea"></div>
 
-            <ul id="menu" class="hidden">
+            <section id="menu" class="hidden">
                 <img src="burgermenu/logo.svg" alt="kea">
-                <li><a href="index.html">Aktuelt</a></li>
-                <br>
-                <br>
-                <li> <a href="index.html">Skema</a></li>
-                <br>
-                <br>
-                <li><a href="aflevering.html">Afleveringer</a></li>
-                <br>
-                <br>
-                <li> <a href="index.html">Materialer</a></li>
-                <br>
-                <br>
-                <li><a href="index.html">Chat</a></li>
-                <br>
-                <br>
-                <li> <a href="index.html">Indstillinger</a></li>
+                <a href="index.html">Aktuelt</a>
+
+                <a href="index.html">Skema</a>
+
+                <a href="aflevering.html">Afleveringer</a>
+
+                <a href="index.html">Materialer</a>
+
+                <a href="index.html">Chat</a>
+
+                <a href="index.html">Indstillinger</a>
 
                 <div class="footer">
                     <p>Log ud</p>
                 </div>
-
-
-            </ul>
+            </section>
         </nav>
     </header>
 
@@ -90,11 +83,29 @@
 
         <ul id="dropdown" class="hidden">
 
-            <li>04.01.01 - Opgavebeskrivelse - Design Sprint</li>
+            <li>04.01.01 - Opgavebeskrivelse - Design Sprint
 
-            <li> 04.01.01 - Opgavebeskrivelse - Design Sprint</li>
+                <p class="txt2">Dit fil navn</p>
+
+                <img class="link2" src="afleveringsite/link.svg" alt="link">
+            </li>
+
+            <li> 04.01.01 - Opgavebeskrivelse - Design Sprint
+
+                <p class="txt2">Dit fil navn</p>
+
+                <img class="link2" src="afleveringsite/link.svg" alt="link">
+
+
+            </li>
 
             <li>04.01.01 - Opgavebeskrivelse - Design Sprint
+
+                <p class="txt2">Dit fil navn</p>
+
+
+                <img class="link2" src="afleveringsite/link.svg" alt="link">
+            </li>
 
 
 
@@ -141,6 +152,4 @@
 
     <script src="script.js">
     </script>
-</body>
-
-</html>
+</body></html>
