--- a/skema.html
+++ b/skema.html
@@ -28,20 +28,15 @@
             <ul id="menu" class="hidden">
                 <img src="burgermenu/logo.svg" alt="kea">
                 <li><a href="index.html">Aktuelt</a></li>
-                <br>
-                <br>
+
                 <li> <a href="index.html">Skema</a></li>
-                <br>
-                <br>
+
                 <li><a href="aflevering.html">Afleveringer</a></li>
-                <br>
-                <br>
+
                 <li> <a href="index.html">Materialer</a></li>
-                <br>
-                <br>
+
                 <li><a href="index.html">Chat</a></li>
-                <br>
-                <br>
+
                 <li> <a href="index.html">Indstillinger</a></li>
 
                 <div class="footer">
@@ -62,4 +57,6 @@
 
     <script src="script.js">
     </script>
-</body></html>
+</body>
+
+</html>
