--- a/start.html
+++ b/start.html
@@ -18,42 +18,40 @@
 
 <body>
 
+
     <header class="header2">
         <img src="startside_ui/kealille.svg" alt="kea">
         <nav>
-            <img class="profil" src="startside_ui/Profile.svg" alt="kea">
+
+            <a href="start.html"> <img class="profil" src="startside_ui/Profile.svg" alt="kea">
+            </a>
+
             <div id="menuknap"><img id="menuknap_img" src="startside_ui/Menu.svg" alt="kea"></div>
 
-            <ul id="menu" class="hidden">
+            <section id="menu" class="hidden">
                 <img src="burgermenu/logo.svg" alt="kea">
-                <li><a href="index.html">Aktuelt</a></li>
-                <br>
-                <br>
-                <li> <a href="skema.html">Skema</a></li>
-                <br>
-                <br>
-                <li><a href="aflevering.html">Afleveringer</a></li>
-                <br>
-                <br>
-                <li> <a href="index.html">Materialer</a></li>
-                <br>
-                <br>
-                <li><a href="index.html">Chat</a></li>
-                <br>
-                <br>
-                <li> <a href="index.html">Indstillinger</a></li>
+                <a href="index.html">Aktuelt</a>
+
+                <a href="index.html">Skema</a>
+
+                <a href="aflevering.html">Afleveringer</a>
+
+                <a href="index.html">Materialer</a>
+
+                <a href="index.html">Chat</a>
+
+                <a href="index.html">Indstillinger</a>
 
                 <div class="footer">
                     <p>Log ud</p>
                 </div>
-
-            </ul>
-
+            </section>
         </nav>
     </header>
 
-    <section id="box">
-        <article class="box1row">
+    <main id="startside">
+
+        <article class="box_small">
 
             <figure>
 
@@ -65,7 +63,7 @@
 
         </article>
 
-        <article class="box1row">
+        <article class="box_small">
 
             <figure>
                 <a href="skema.html"> <img src="startside_ui/Calendar.svg" alt="calender"></a>
@@ -76,7 +74,7 @@
 
 
         </article>
-        <article class="box1row">
+        <article class="box_small">
 
             <figure>
                 <img src="startside_ui/Alert.svg" alt="calender">
@@ -88,24 +86,24 @@
 
 
 
-        <article class="box2row">
+        <article class="box_long">
             <h1>Techlounge</h1>
         </article>
-        <article class="box1row">
+        <article class="box_small">
             <figure>
                 <img src="startside_ui/mail.svg" alt="mail">
                 <figcaption>Mail</figcaption>
             </figure>
         </article>
 
-        <article class="box1row">
+        <article class="box_small">
 
             <figure>
                 <img src="startside_ui/favoritter.svg" alt="favoritter">
                 <figcaption>Farvoritter</figcaption>
             </figure>
         </article>
-        <article class="box1row">
+        <article class="box_small">
 
             <figure>
                 <img src="startside_ui/grupper.svg" alt="grupper">
@@ -114,75 +112,71 @@
 
 
         </article>
-        <article class="box1row">
+        <article class="box_small">
             <figure>
                 <img src="startside_ui/chat.svg" alt="chat">
                 <figcaption>Chat</figcaption>
             </figure>
         </article>
 
-    </section>
 
-    <section id="box_1">
+
+
 
         <section class="box_left">
 
 
-            <article class="box1row">
+            <article class="box_small">
                 <figure>
                     <img src="startside_ui/Search.svg" alt="chat">
                     <figcaption>Søg</figcaption>
                 </figure>
             </article>
 
-            <article class="box1row">
+            <article class="box_small">
                 <figure>
-                    <img src="startside_ui/afleveringer.svg" alt="chat">
+                    <a href="aflevering.html"><img src="startside_ui/afleveringer.svg" alt="chat"></a>
                     <figcaption>Afleveringer</figcaption>
                 </figure>
             </article>
 
 
         </section>
-        <section class="box_right">
-            <article class="box3row">
 
-                <h2>Aktuelt</h2>
-            </article>
-        </section>
+        <article class="box_big">
 
-    </section>
-
-    <section id="box_2">
-
-
-        <article class="box1row">
-            <figure>
-                <img src="startside_ui/question.svg" alt="chat">
-                <figcaption>xxx</figcaption>
-            </figure>
-        </article>
-        <article class="box1row">
-            <figure>
-                <img src="startside_ui/question.svg" alt="chat">
-                <figcaption>xxx</figcaption>
-            </figure>
-        </article>
-        <article class="box1row">
-            <figure>
-                <img src="startside_ui/question.svg" alt="chat">
-                <figcaption>xxx</figcaption>
-            </figure>
+            <h2>Aktuelt</h2>
         </article>
 
 
 
 
 
-    </section>
+        <article class="box_small">
+            <figure>
+                <img src="startside_ui/question.svg" alt="chat">
+                <figcaption>xxx</figcaption>
+            </figure>
+        </article>
+        <article class="box_small">
+            <figure>
+                <img src="startside_ui/question.svg" alt="chat">
+                <figcaption>xxx</figcaption>
+            </figure>
+        </article>
+        <article class="box_small">
+            <figure>
+                <img src="startside_ui/question.svg" alt="chat">
+                <figcaption>xxx</figcaption>
+            </figure>
+        </article>
+
+
+
+
+
+    </main>
 
     <script src="script.js">
     </script>
-</body>
-
-</html>
+</body></html>
