--- a/aflevering.html
+++ b/aflevering.html
@@ -26,6 +26,7 @@
             <div id="menuknap"><img id="menuknap_img" src="startside_ui/Menu.svg" alt="kea"></div>
 
             <section id="menu" class="hidden">
+
                 <img src="burgermenu/logo.svg" alt="kea">
                 <a href="index.html">Aktuelt</a>
 
@@ -46,110 +47,113 @@
         </nav>
     </header>
 
-    <h1> Afleveringer</h1>
-    <br>
-    <h3>Næste aflevering</h3>
+    <main>
+        <h1> Afleveringer</h1>
+        <br>
+        <h3>Næste aflevering</h3>
 
-    <section class="grey">
+        <section class="grey">
 
-        <h4> F19 - 04.01.01 - Opgavebeskrivelse - Design Sprint</h4>
-        <p class="txt">Det er vigtigt at du fokuserer på…</p>
+            <h4> F19 - 04.01.01 - Opgavebeskrivelse - Design Sprint</h4>
+            <p class="txt">Det er vigtigt at du fokuserer på…</p>
 
-        <a class="link" href="skema.html"> <img src="afleveringsite/link.svg" alt="calender"></a>
+            <div class="flexcontainer"><a class="link" href="skema.html"> <img src="afleveringsite/link.svg" alt="calender"></a></div>
 
-    </section>
+        </section>
 
-    <h3>Upload aflevering</h3>
-
-
-
-    <section class="grey">
-
-        <article>
-            <h4> Aflevér</h4>
-            <p class="txt">Tirsdag d. 21/5/19 inden kl. 22.00</p>
-            <div class="link"><a href="skema.html"> <img src="afleveringsite/pil.svg" alt="calender"></a></div>
-
-        </article>
-    </section>
-
-    <h3>Tidligere afleveringer</h3>
-    <section class="grey">
-
-
-        <h4> Tema 1</h4>
-        <p class="txt">Grundlæggende Web</p>
-        <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
-
-        <ul id="dropdown" class="hidden">
-
-            <li>04.01.01 - Opgavebeskrivelse - Design Sprint
-
-                <p class="txt2">Dit fil navn</p>
-
-                <img class="link2" src="afleveringsite/link.svg" alt="link">
-            </li>
-
-            <li> 04.01.01 - Opgavebeskrivelse - Design Sprint
-
-                <p class="txt2">Dit fil navn</p>
-
-                <img class="link2" src="afleveringsite/link.svg" alt="link">
-
-
-            </li>
-
-            <li>04.01.01 - Opgavebeskrivelse - Design Sprint
-
-                <p class="txt2">Dit fil navn</p>
-
-
-                <img class="link2" src="afleveringsite/link.svg" alt="link">
-            </li>
+        <h3>Upload aflevering</h3>
 
 
 
+        <section class="grey">
 
-        </ul>
+            <article>
+                <h4> Aflevér</h4>
+                <p class="txt">Tirsdag d. 21/5/19 inden kl. 22.00</p>
+                <div class="flexcontainer"><a href="skema.html"> <img src="afleveringsite/pil.svg" alt="calender"></a></div>
 
-    </section>
+            </article>
+        </section>
 
-    <section class="grey">
-
-        <article>
-            <h4> Tema 2</h4>
-            <p class="txt">Grundlæggende Animation</p>
-            <a class="link" href="skema.html"> <img src="afleveringsite/Down%20arrow%20small.svg" alt="calender"></a>
-
-
-        </article>
-    </section>
-
-    <section class="grey">
-
-        <article>
-            <h4> Tema 3</h4>
-            <p class="txt">Grundlæggende Indhold</p>
-            <a class="link" href="skema.html"> <img src="afleveringsite/Down%20arrow%20small.svg" alt="calender"></a>
+        <h3>Tidligere afleveringer</h3>
+        <section class="grey">
 
 
-        </article>
-    </section>
+            <h4> Tema 1</h4>
+            <p class="txt">Grundlæggende Web</p>
+            <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
 
-    <section class="grey">
+            <ul id="dropdown" class="hidden">
 
-        <article>
-            <h4> Tema 4</h4>
-            <p class="txt">Grundlæggende UX</p>
-            <a class="link" href="skema.html"> <img src="afleveringsite/Down%20arrow%20small.svg" alt="calender"></a>
+                <li>04.01.01 - Opgavebeskrivelse - Design Sprint
+
+                    <p class="txt2">Dit fil navn</p>
+
+                    <img class="link2" src="afleveringsite/link.svg" alt="link">
+                </li>
+
+                <li> 04.01.01 - Opgavebeskrivelse - Design Sprint
+
+                    <p class="txt2">Dit fil navn</p>
+
+                    <img class="link2" src="afleveringsite/link.svg" alt="link">
 
 
-        </article>
-    </section>
+                </li>
+
+                <li>04.01.01 - Opgavebeskrivelse - Design Sprint
+
+                    <p class="txt2">Dit fil navn</p>
+
+
+                    <img class="link2" src="afleveringsite/link.svg" alt="link">
+                </li>
 
 
 
 
-    <script src="script.js">
-    </script>
-</body></html>
+            </ul>
+
+        </section>
+
+        <section class="grey">
+
+            <article>
+                <h4> Tema 2</h4>
+                <p class="txt">Grundlæggende Animation</p>
+                <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
+
+
+            </article>
+        </section>
+
+        <section class="grey">
+
+            <article>
+                <h4> Tema 3</h4>
+                <p class="txt">Grundlæggende Indhold</p>
+                <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
+
+            </article>
+        </section>
+
+        <section class="grey">
+
+            <article>
+                <h4> Tema 4</h4>
+                <p class="txt">Grundlæggende UX</p>
+                <img id="pil" src="afleveringsite/Down%20arrow%20small.svg" alt="pil">
+
+
+            </article>
+        </section>
+
+
+
+
+        <script src="script.js">
+        </script>
+    </main>
+</body>
+
+</html>
