--- a/start.html
+++ b/start.html
@@ -42,9 +42,12 @@
 
                 <a href="index.html">Indstillinger</a>
 
-                <div class="footer">
-                    <p>Log ud</p>
-                </div>
+                <a href="index.html">
+                    <div class="footer">
+                        <p>Log ud</p>
+                    </div>
+                </a>
+
             </section>
         </nav>
     </header>
@@ -179,4 +182,6 @@
 
     <script src="script.js">
     </script>
-</body></html>
+</body>
+
+</html>
