--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <form>
             <input type="text" name="fname"><br>
-            <input type="text" name="lname"><br>
+            <input type="password" name="lname"><br>
 
         </form>
 
